# OpenCode-Token-Meter

./: AGENTS.md  CHANGELOG.md  OpenCodeTokenMeter.spec  README.md  README_CN.md  build.sh  build_windows.bat  create_dmg.sh
App/agent/: pyproject.toml
App/agent/agent/: __main__.py  cli.py  config.py  db.py  exporter.py  logger.py  scanner.py  uds_server.py  util.py
App/agent/scripts/: com.opencode.token.agent.plist  install_agent.sh  uninstall_agent.sh
App/menubar/: cleanup-bundle.sh  hook-PyQt6.py  opencode-menubar.spec  pyproject.toml  setup.py
App/menubar/menubar/: __init__.py  __main__.py  app.py  settings.py  uds_client.py
App/menubar/menubar/utils/: ui_helpers.py
App/menubar/menubar/windows/: __init__.py  custom_range_dialog.py  custom_range_stats_dialog.py  details_dialog.py  main_stats_window.py  model_update_dialog.py  settings_dialog.py
App/webview_ui/: __init__.py  __main__.py  main.py  main_tray.py  stats_worker.py
App/webview_ui/backend/: api.py  bridge.py  db_read.py  settings.py  tray.py  tray_rumps.py  utils.py
App/webview_ui/web/: index.html
App/webview_ui/web/assets/: AppIcon.icns
App/webview_ui/web/css/: dashboard.css  styles.css
App/webview_ui/web/js/: api.js  app.js  charts.v2.js  dashboard.v2.js  details.js  dialog.js  font_scale.js  settings.js
hooks/: hook-http.py  hook-wsgiref.py
